[package]
name = "function"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "1", features = [ "http1", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.35", features = ["rt", "macros", "tracing", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = [ "add-extension", "trace", "cors", "fs", ] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.axum]
version = "0.7"
features = [ "json", "multipart", "tracing"]

[dependencies.sqlx]
version = "0.7.1"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]
